tests/fixtures/errors/get_then_mutate.z
# get_then_mutate.z -- a bound List element (a shared borrow via get's
# declared `out of.borrow`) held across a container mutation is rejected:
# the write could realloc the storage under the live view.
main: function is {
    xs: (List String)
    a: "alpha".string
    xs.append a
    e: xs.get i: 0
    b: "beta".string
    xs.append b
    print "\{e}"
}
